[package]
name    = "readings"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "readings"
path = "src/main.rs"

[dependencies]
axum       = "0.7"
tokio      = { version = "1", features = ["full"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest    = { version = "0.12", features = ["json"] }
chrono     = "0.4"
chrono-tz  = "0.10"
dotenvy            = "0.15"
tower-http         = { version = "0.6", features = ["trace"] }
tracing-subscriber = "0.3"
